# AnopluraTraiter

./: .dev_env.bash  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  Makefile  README.md  anoplura.py  app.py  dev_env.bash  extract.py  pdf2txt.py  pylock.toml  pyproject.toml  requirements.txt  requirements_dev.txt  tmux.bash
.github/workflows/: python-app.yml
anoplura/: __init__.py  clean_data.py  clean_raw_lm.py  extract.py  extract_data.py  extract_lm.py  extract_rules.py  output_data.py  taxa.py
anoplura/fields/: abdomen_lengths.py  abdomen_widths.py  antenna_segments.py  body_lengths.py  dpts_lengths.py  excepts.py  geographic_locations.py  head_lengths.py  head_widths.py  host_locations.py  plates.py  seta_counts.py  specimen_types.py  spiracle_diameters.py  sternites.py  tergites.py  thorax_lengths.py  thorax_widths.py
anoplura/matchers/: abbreviations.py  body_part.py  matcher.py  sci_name.py
anoplura/patterns/: body_part.py  body_part_count.py  description.py  elevation.py  event_date.py  length.py  max_width.py  measurement.py  numeric.py  sci_name.py  seta_count.py  sex_count.py  size.py
anoplura/pylib/: __init__.py  actions.py  const.py  consts.py  dim.py  dimension.py  format_util.py  ints.py  log.py  pipeline.py  prompt_util.py  roman.py  segmenter.py  str_util.py  terms.py  text_util.py  timer.py  util.py
anoplura/rules/: amount.py  base.py  base_rule.py  body_part.py  body_part_size.py  clean.py  clean_traits.py  count.py  count_linker.py  date_.py  delete_unlinked.py  description.py  description_linker.py  dimension.py  elevation.py  gonopod.py  gonopod_seta.py  group.py  group_prefix.py  lat_long.py  link_part.py  link_part_seta.py  link_part_to_part.py  mean.py  measure.py  morphology.py  part.py  part_count.py  part_description.py  part_linker.py  part_mean.py  part_morphology.py  part_range.py  part_sample.py  part_sclerotization.py  part_seta.py  part_shape.py  part_size.py  part_stats.py  phrase_linker.py  (+50 more)
anoplura/signatures/: louse.py
anoplura/terms/: seta_patterns.csv
anoplura/vocabulary/: anoplura_terms.csv  common_terms.csv
anoplura/writers/: html_writer.py  json_writer.py  md_writer.py  text_writer.py  writer_util.py
args/: clean_data.bash  clean_raw_lm.bash  extract_data.bash  extract_lm.bash  extract_lm_extract.bash  extract_rules.bash  extract_test.bash  output_data.bash  pdf2txt.toml
docs/: Louse Morphology Descriptors2June2020.csv  traiter_gui_draft.odt
lice/matchers/: abbreviations.py  body_length.py  collection_date.py  elevation.py  event_date.py  length.py  matcher.py  max_width.py  range.py  sci_name.py  sclerotized.py  sex_count.py  shared.py  size.py
lice/pylib/: segmenter.py  terms.py  util.py
lice/vocabulary/: common.csv  lice.csv  terms.csv
notebooks/: Anoplura_august.ipynb  distilbert.ipynb
prompts/: anoplura.md  test.md
prompts/fields/: abdomen_lengths.md  abdomen_widths.md  antenna_segments.md  antennae_segments.md  body_lengths.md  dpts_length.md  dpts_lengths.md  excepts.md  geographic_localities.md  geographic_locations.md  head_lengths.md  head_widths.md  host_locations.md  plates.md  seta_counts.md  specimen_types.md  spiracle_diameters.md  spiracles.md  sternites.md  tergites.md  thorax_lengths.md  thorax_widths.md
src/gui/: app_window.py  main_window.py  main_window.ui
src/matchers/: abbreviations.py  antenna.py  body_length.py  body_part.py  body_part_count.py  description.py  elevation.py  event_date.py  length.py  matcher.py  max_width.py  measurement.py  number.py  numeric.py  pipeline.py  range.py  rule_matcher.py  sci_name.py  sclerotized.py  sentence_pipeline.py  seta_count.py  setae_count.py  sex_count.py  shared.py  size.py  sternal_plate.py  term_matcher.py  thoracic_sternal_plate.py
src/patterns/: body_part.py  body_part_count.py  elevation.py  event_date.py  length.py  numeric.py  sci_name.py  sex_count.py  size.py
src/pylib/: actions.py  command.py  consts.py  db.py  doc.py  ner.py  pdf.py  pipeline.py  script.py  terms.py  util.py
src/spacy_matchers/: antenna.py  body_length.py  body_part.py  consts.py  elevation.py  event_date.py  matcher.py  max_width.py  measurement.py  number.py  pipeline.py  sci_name.py  sclerotized.py  setae_count.py  sex_count.py  size.py
src/sql/: create_db.sql
src/vocabulary/: anoplura.csv  anoplura_species.csv  anoplura_terms.csv  common_terms.csv
src/writers/: html_writer.py
tests/: setup.py  test_str_util.py  test_text.py
tests/info/: extracts.jsonl
tests/matchers/: test_antenna.py  test_description.py  test_length.py  test_max_width.py  test_measurement.py  test_range.py  test_sci_name.py  test_sclerotized.py  test_sentencizer.py  test_sententizer.py  test_setae_count.py  test_size.py  test_sternal_plate.py  test_thoracic_sternal_plate.py
tests/patterns/: test_antenna.py  test_body_part.py  test_description.py  test_length.py  test_max_width.py  test_sci_name.py  test_sclerotized.py  test_sentencizer.py  test_setae_count.py  test_size.py  test_thoracic_sternal_plate.py
tests/pylib/: __init__.py  test_roman.py
tests/rules/: old_link_part.py  old_link_part_to_part.py  old_part_count.py  old_part_description.py  old_part_sclerotization.py  (+79 more)
(+78 files in other folders)
