[build-system]
requires = ["uv_build>=0.8.13"]
build-backend = "uv_build"

[project]
name = "anopluraTraiter"
version = "0.1.0"
readme = "README.md"
description = "Rule-based parsers for mining scientific liturature about biting lice"
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "raphael.lafrance@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "jinja2>=3.1.6",
  "marimo[lsp]>=0.23.0",
  "openai>=2.32.0",
  "pandas>=3.0.2",
  "requests>=2.34.2",
  "rich>=14.3.3",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["pre-commit>=4.4.0", "uv-build>=0.9.9"]

[tool.uv.build-backend]
module-root = "."
module-name = "anoplura"

[tool.uv]

[tool.ruff]
show-fixes = true
exclude = [
  "**/external/**", # External code
  "notebooks/*",
]

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "C901",    # is too complex
  "COM812",  # Trailing comma missing
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
  "ERA001",  # Remove commented-out code
  "G004",    # Logging statement uses f-string
  "LOG015",  # Use own logger instead
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements
  "PLR0912", # Too many branches
  "PLW0603", # Using the global statement to update global variable is discouraged
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # String contains ambiguous charater
  "SIM114",  # Combine if branches using logical or operator
  "T201",    # print found
]
