[build-system]
requires = ["uv_build>=0.8.13"]
build-backend = "uv_build"

[project]
name = "anopluraTraiter"
version = "0.2.0"
readme = "README.md"
description = "Rule-based parsers for mining scientific liturature about biting lice"
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance" }]
requires-python = ">=3.14"
dependencies = [
  "pandas>=3.0.2",
  "requests>=2.34.2",
]

[dependency-groups]
dev = ["pre-commit>=4.4.0", "uv-build>=0.9.9"]

[tool.uv.build-backend]
module-root = "."
module-name = "anoplura"

[tool.uv]

[tool.ruff]
show-fixes = true
exclude = [
  "**/external/**", # External code
  "notebooks/*",
]

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "C901",    # is too complex
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in public method
  "D107",    # Missing docstring in public __init__
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
  "ERA001",  # Remove commented-out code
  "G004",    # Logging statement uses f-string
  "LOG015",  # Use own logger instead
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements
  "PLR0912", # Too many branches
  "PLW0603", # Using the global statement to update global variable is discouraged
  "PLW2901", # Outer variable overwritten by inner target
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # String contains ambiguous charater
  "S101",    # Use of assert detected
  "SIM114",  # Combine if branches using logical or operator
  "T201",    # print found
]
